- FIX: opacity on button was disappearing, changed to bg color shift

--- a/src/index.css
+++ b/src/index.css
@@ -45,6 +45,6 @@ button:focus {
 }
 .code-open:hover,
 .code-close:hover {
-  opacity: 75%;
+  background-color: rgb(80, 80, 80);
   cursor: pointer;
 }
